# ip2asn

./: .clinerules  .gitignore  .rooignore  .roomodes  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  justfile
.roo/commands/: approach.md  changelog-entry.md  debugtest.md  history.md  implement.md  plan.md  propose.md  slowapproach.md  socratic.md  spec.md
benches/: lookup_benchmark.rs
docs/: history.md  journal.md  plan.md  spec-cli-improvements.md  spec-ip2asn-cli.md  spec-struct-improvements.md  spec-test-coverage.md  spec.md  user-request.md
ip2asn-cli/: CHANGELOG.md  Cargo.toml  README.md
ip2asn-cli/src/: config.rs  error.rs  main.rs
ip2asn-cli/tests/: cli.rs
prompting/: api_review.md  prompt_plan.md  spec.md
src/: interner.rs  lib.rs  parser.rs  range.rs  types.rs
testdata/: testdata-small-ip2asn.tsv
tests/: integration.rs  parser.rs  rstest_integration.rs
