[package]
name = "ip2asn"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ip_network = "0.4.1"
ip_network_table = { version = "0.2.0" }
flate2 = "1.0"
reqwest = { version = "0.12.5", features = ["blocking"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.0"
criterion = { version = "0.6.0", features = ["html_reports"] }

[features]
fetch = ["dep:reqwest"]

[[bench]]
name = "lookup_benchmark"
harness = false
