[workspace]
members = [
    "ip2asn-cli",
]
resolver = "2"

[package]
name = "ip2asn"
version = "0.1.1"
edition = "2021"
authors = ["x123 <x123@users.noreply.github.com>"]
license = "MIT"
description = "A high-performance, memory-efficient Rust crate for mapping IP addresses to Autonomous System (AS) information."
readme = "README.md"
homepage = "https://github.com/x123/ip2asn"
repository = "https://github.com/x123/ip2asn"
documentation = "https://docs.rs/ip2asn"
keywords = ["ip", "asn", "geoip", "network", "lookup"]
categories = ["network-programming", "parser-implementations", "data-structures"]

[dependencies]
ip_network = { version = "0.4.1" }
ip_network_table = { version = "0.2.0" }
flate2 = "1.0"
reqwest = { version = "0.12.5", features = ["blocking"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.0"
criterion = { version = "0.6.0", features = ["html_reports"] }
serde_json = "1.0"
rstest = "0.21.0"
mockall = "0.12.1"
proptest = "1.5.0"

[features]
fetch = ["dep:reqwest"]
serde = ["dep:serde", "ip_network/serde"]

[[bench]]
name = "lookup_benchmark"
harness = false
