[package]
name = "ip2asn-cli"
version = "0.1.0"
edition = "2021"
authors = ["x123 <x123@users.noreply.github.com>"]
license = "MIT"
description = "A CLI for the ip2asn crate."
repository = "https://github.com/x123/ip2asn"

[dependencies]
ip2asn = { path = "..", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"