[package]
name = "ip2asn-cli"
version = "0.1.0"
edition = "2021"
authors = ["x123 <x123@users.noreply.github.com>"]
license = "MIT"
description = "A CLI for the ip2asn crate."
repository = "https://github.com/x123/ip2asn"

[dependencies]
ip2asn = { path = "..", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
toml = "0.8"
httpdate = "1.0"
tracing = "0.1"
home = "0.5.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
wiremock = "0.6"
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
filetime = "0.2"
flate2 = "1.0"
httpdate = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4.0"
mutex = "0.1.0"
